<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity5">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_volume_up_24"
        android:padding="30dp"
        android:contentDescription="@string/gambar5" />

    <TextView
        android:id="@+id/tvJudul"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul" />

    <TextView
        android:id="@+id/tvPenyanyi"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/penyanyi" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/playsfx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_sfx" />

</LinearLayout>