<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#14AF94">

    <LinearLayout
        android:layout_width="315dp"
        android:orientation="vertical"
        android:layout_height="232dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:padding="16dp"
        android:background="#DA93F4" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/login_page"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_nama_anda"
            android:background="#91F0DF"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="LabelFor"
            android:importantForAutofill="no"
            android:id="@+id/namaInput"/>

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/next"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#3963E1"
            android:textColor="@color/white"
            android:text="@string/next" />




    </LinearLayout>

</LinearLayout>